Agrega dir js y archivo main.js, modifica index.html

--- a/index.html
+++ b/index.html
@@ -372,34 +372,7 @@
         <a class="w3-button w3-round-xxlarge w3-small w3-light-grey w3-margin-bottom"
             href="https://www.w3schools.com/spaces" target="_blank">Start now</a>
     </footer>
-
-    <script>
-        // Modal Image Gallery
-        function onClick(element) {
-            document.getElementById("img01").src = element.src;
-            document.getElementById("modal01").style.display = "block";
-            var captionText = document.getElementById("caption");
-            captionText.innerHTML = element.alt;
-        }
-
-
-        // Toggle between showing and hiding the sidebar when clicking the menu icon
-        var mySidebar = document.getElementById("mySidebar");
-
-        function w3_open() {
-            if (mySidebar.style.display === 'block') {
-                mySidebar.style.display = 'none';
-            } else {
-                mySidebar.style.display = 'block';
-            }
-        }
-
-        // Close the sidebar with the close button
-        function w3_close() {
-            mySidebar.style.display = "none";
-        }
-    </script>
-
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
