--- a/home.html
+++ b/home.html
@@ -5,40 +5,13 @@
     <title>W3.CSS Template</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <!--<link rel="stylesheet" href="./css/main.css">-->
-    <style>
-        body,
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6 {
-            font-family: "Raleway", sans-serif
-        }
+    <link rel="stylesheet" href="./css/main.css">
 
-        body,
-        html {
-            height: 100%;
-            line-height: 1.8;
-        }
-
-        /* Full height image header */
-        .bgimg-1 {
-            background-position: center;
-            background-size: cover;
-            background-image: url("https://www.w3schools.com/w3images/mac.jpg");
-            min-height: 100%;
-        }
-
-        .w3-bar .w3-button {
-            padding: 16px;
-        }
-    </style>
 </head>
 
 <body>
@@ -46,14 +19,17 @@
     <!-- Navbar (sit on top) -->
     <div class="w3-top">
         <div class="w3-bar w3-white w3-card" id="myNavbar">
-            <a href="#home" class="w3-bar-item w3-button w3-wide">LOGO</a>
+            <a href="#home" class="w3-bar-item w3-button w3-wide">
+                <img src="./images/free-logo-1.png" alt="Logo" style="width:30px;" class="rounded-pill">
+                <span id="tipo">BlueMoon</span>
+            </a>
             <!-- Right-sided navbar links -->
             <div class="w3-right w3-hide-small">
-                <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
-                <a href="#team" class="w3-bar-item w3-button"><i class="fa fa-user"></i> TEAM</a>
-                <a href="#work" class="w3-bar-item w3-button"><i class="fa fa-th"></i> WORK</a>
-                <a href="#pricing" class="w3-bar-item w3-button"><i class="fa fa-usd"></i> PRICING</a>
-                <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
+                <a href="#about" class="w3-bar-item w3-button">NOSOTROS</a>
+                <a href="#team" class="w3-bar-item w3-button"><i class="fa fa-user"></i> EQUIPO</a>
+                <a href="#work" class="w3-bar-item w3-button"><i class="fa fa-th"></i> TRABAJOS</a>
+                <a href="#pricing" class="w3-bar-item w3-button"><i class="fa fa-usd"></i> TARIFAS</a>
+                <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACTO</a>
             </div>
             <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -69,11 +45,11 @@
         style="display:none" id="mySidebar">
         <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close
             ×</a>
-        <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
-        <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">TEAM</a>
-        <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">WORK</a>
-        <a href="#pricing" onclick="w3_close()" class="w3-bar-item w3-button">PRICING</a>
-        <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
+        <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">NOSOTROS</a>
+        <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">EQUIPO</a>
+        <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">TRABAJOS</a>
+        <a href="#pricing" onclick="w3_close()" class="w3-bar-item w3-button">TARIFAS</a>
+        <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACTO</a>
     </nav>
 
     <!-- Header with full-height image -->
@@ -403,33 +379,8 @@
             href="https://www.w3schools.com/spaces" target="_blank">Start now</a>
     </footer>
     
-    <!--<script src="./js/main.js"></script>-->
-    <script>
-        // Modal Image Gallery
-            function onClick(element) {
-                document.getElementById("img01").src = element.src;
-                document.getElementById("modal01").style.display = "block";
-                var captionText = document.getElementById("caption");
-                captionText.innerHTML = element.alt;
-            }
+    <script src="./js/main.js"></script>
 
-
-            // Toggle between showing and hiding the sidebar when clicking the menu icon
-            var mySidebar = document.getElementById("mySidebar");
-
-            function w3_open() {
-                if (mySidebar.style.display === 'block') {
-                    mySidebar.style.display = 'none';
-                } else {
-                    mySidebar.style.display = 'block';
-                }
-            }
-
-            // Close the sidebar with the close button
-            function w3_close() {
-                mySidebar.style.display = "none";
-            }
-    </script>
 </body>
 
 </html>
